@@ -470,6 +470,8 @@ MSW:
 
 - Added wxGCDC(wxEnhMetaFileDC) ctor (Marcin Wojdyr).
 - Added wxTopLevelWindow::MSWGetSystemMenu().
+- Multiline text controls no longer select all content when gaining focus from
+  the keyboard.
 
 
 2.9.2: (released 2011-07-05)
